<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ngame="http://schemas.android.com/tools"
    xmlns:tabs="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_title_left_center" />

    <EditText
        android:id="@+id/et_login_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginLeft="@dimen/login_bt_margin_left_right"
        android:layout_marginRight="@dimen/login_bt_margin_left_right"
        android:layout_marginTop="@dimen/dm040"
        android:background="@null"
        android:hint="@string/enter_account"
        android:maxLength="30"
        android:singleLine="true"
        android:textColor="@color/color212121"
        android:textColorHint="@color/color_hint"
        android:textCursorDrawable="@drawable/shape_cursor_color_main_color"
        android:textSize="@dimen/dm028" />

    <include layout="@layout/layout_line_1px_divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm088"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/login_bt_margin_left_right"
        android:layout_marginRight="@dimen/login_bt_margin_left_right">

        <EditText
            android:id="@+id/et_captcha"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm088"
            android:background="@null"
            android:hint="@string/register_captcha"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/color212121"
            android:textColorHint="@color/color_hint"
            android:textCursorDrawable="@drawable/shape_cursor_color_main_color"
            android:textSize="@dimen/dm028" />

        <TextView
            android:id="@+id/tv_captcha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_bg_verif_code_bt_send"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="@dimen/dm007"
            android:paddingLeft="@dimen/dm010"
            android:paddingRight="@dimen/dm010"
            android:paddingTop="@dimen/dm005"
            android:text="@string/register_get_captcha"
            android:textColor="@color/white"
            android:textSize="@dimen/dm020" />

    </RelativeLayout>
    <include layout="@layout/layout_line_1px_divider" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm070"
        android:layout_marginBottom="@dimen/dm020"
        android:layout_marginLeft="@dimen/login_bt_margin_left_right"
        android:layout_marginRight="@dimen/login_bt_margin_left_right"
        android:layout_marginTop="@dimen/dm050"
        android:background="@drawable/selector_login_bt"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/dm028" />
</LinearLayout>