<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ngame="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/f5f5f5"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_title_left_center" />

    <include layout="@layout/layout_line_1px_divider" />

    <EditText
        android:id="@+id/et_login_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm088"
        android:background="@color/white"
        android:hint="@string/register_mobile"
        android:maxLength="30"
        android:singleLine="true"
        android:paddingLeft="@dimen/dm020"
        android:layout_marginLeft="@dimen/dm030"
        android:layout_marginRight="@dimen/dm030"
        android:layout_marginTop="@dimen/dm030"
        android:textColor="@color/color212121"
        android:textColorHint="@color/color_hint"
        android:textCursorDrawable="@drawable/shape_cursor_color_main_color"
        android:textSize="@dimen/dm028" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm088"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/dm001"
        android:background="@color/white"
        android:layout_marginLeft="@dimen/dm030"
        android:layout_marginRight="@dimen/dm030">

        <EditText
            android:id="@+id/et_captcha"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm088"
            android:background="@null"
            android:paddingLeft="@dimen/dm020"
            android:hint="@string/register_captcha"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/color212121"
            android:textColorHint="@color/color_hint"
            android:textCursorDrawable="@drawable/shape_cursor_color_main_color"
            android:textSize="@dimen/dm028" />

        <TextView
            android:id="@+id/tv_captcha"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dm020"
            android:background="@drawable/shape_bg_verif_code_bt_send"
            android:gravity="center"
            android:paddingLeft="@dimen/dm005"
            android:paddingRight="@dimen/dm005"
            android:text="@string/register_get_captcha"
            android:textColor="@color/time_nomal_text_color"
            android:textSize="@dimen/dp_10" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm088"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/dm001"
        android:background="@color/white"
        android:layout_marginLeft="@dimen/dm030"
        android:layout_marginRight="@dimen/dm030">

        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm088"
            android:background="@null"
            android:paddingLeft="@dimen/dm020"
            android:hint="@string/find_new"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/color212121"
            android:textColorHint="@color/color_hint"
            android:textCursorDrawable="@drawable/shape_cursor_color_main_color"
            android:textSize="@dimen/dm028" />

        <ImageButton
            android:id="@+id/bt_show_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dm020"
            android:background="@drawable/selector_eye_open_close"
            android:scaleType="centerInside" />

    </RelativeLayout>


    <Button
        android:id="@+id/bt_find_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm070"
        android:layout_marginLeft="@dimen/dm030"
        android:layout_marginRight="@dimen/dm030"
        android:layout_marginTop="@dimen/dm030"
        android:background="@drawable/selector_login_bt"
        android:onClick="onLoginClick"
        android:text="@string/find_now"
        android:textColor="@color/white"
        android:textSize="@dimen/dm028" />

</LinearLayout>