<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/f5f5f5"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/line_height"
        android:background="@drawable/shape_top_line_divider_color">

        <TextView
            android:id="@+id/processor_name_tv"
            style="@style/px28_mainColor"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/app_title_height"
            android:layout_marginLeft="@dimen/dm030"
            android:layout_marginRight="@dimen/dm020"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true" />

        <TextView
            android:id="@+id/processor_status_tv"
            android:layout_width="wrap_content"
            android:textSize="@dimen/dm020"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm026"
            android:layout_toRightOf="@id/processor_name_tv"
            android:background="@drawable/shape_tab_unseleted"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:paddingBottom="@dimen/dm003"
            android:paddingLeft="@dimen/dm006"
            android:paddingRight="@dimen/dm006"
            android:textColor="@color/c2c3c8"
            android:paddingTop="@dimen/dm003"
            android:singleLine="true"
            android:text="" />

        <ImageView
            style="@style/px22_999"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/app_title_height"
            android:layout_alignParentRight="true"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/dm030"
            android:scaleType="centerInside"
            android:singleLine="true"
            android:src="@drawable/ic_next" />
    </RelativeLayout>

    <include layout="@layout/layout_line_1px_divider"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_line_divider_color"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dm020">

        <LinearLayout
            android:layout_width="@dimen/dm200"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dm030">

            <TextView
                style="@style/px26_999"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/processor_item_padding_top"
                android:text="@string/plan_invest" />

            <TextView
                style="@style/px26_999"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/processor_item_padding_top"
                android:text="@string/actual_invest" />

            <TextView
                style="@style/px26_999"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/processor_item_padding_top"
                android:text="@string/plan_numbers" />

            <TextView
                style="@style/px26_999"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/processor_item_padding_top"
                android:text="@string/actual_start_end_date" />

            <TextView
                style="@style/px26_999"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/processor_item_padding_top"
                android:text="@string/plan_start_end_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dm030">

            <TextView
                android:id="@+id/processor_plan_invest_tv"
                style="@style/px26_666"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingTop="@dimen/processor_item_padding_top" />

            <TextView
                style="@style/px26_666"
                android:id="@+id/processor_actual_invest_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingTop="@dimen/processor_item_padding_top" />

            <TextView
                android:id="@+id/processor_plan_count_tv"
                style="@style/px26_666"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingTop="@dimen/processor_item_padding_top" />

            <TextView
                android:id="@+id/processor_actual_start_end_date_tv"
                style="@style/px26_666"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingTop="@dimen/processor_item_padding_top" />

            <TextView
                style="@style/px26_666"
                android:id="@+id/processor_plan_start_end_date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingTop="@dimen/processor_item_padding_top" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>