<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:gravity="center"
        android:padding="@dimen/dm025"
        android:text="添加设备类型"
        android:textColor="@color/white"
        android:textSize="@dimen/dm028" />

    <include layout="@layout/layout_line_1px_d9d9d9"></include>
    <!--android:background="@drawable/shape_simple_dialog"-->
    <TextView
        android:id="@+id/dialog_add_card_title"
        style="@style/px26_666"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dm040"
        android:background="@drawable/shape_gray_no_radius"
        android:drawableRight="@drawable/ic_next_down"
        android:hint="@string/device_type"
        android:padding="@dimen/dm020"
        android:textColorHint="@color/color_hint" />

    <EditText
        android:id="@+id/add_group_plan_in_people_numb_et"
        style="@style/px26_666"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dm040"
        android:layout_marginRight="@dimen/dm040"
        android:background="@drawable/shape_gray_no_radius"
        android:hint="计划进场设备数量"
        android:inputType="number"
        android:padding="@dimen/dm020"
        android:textColorHint="@color/color_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm020"
        android:paddingLeft="@dimen/dm040"
        android:text="@string/plan_in_out_date_str"
        android:textColor="@color/cccccc"
        android:textSize="@dimen/dm026" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dm030"
        android:layout_marginLeft="@dimen/dm040"
        android:layout_marginRight="@dimen/dm030"
        android:layout_marginTop="@dimen/dm020"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/real_start_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_fragment_2_dialog_tab"
            android:clickable="true"
            android:paddingBottom="@dimen/dm013"
            android:paddingLeft="@dimen/dm010"
            android:paddingRight="@dimen/dm010"
            android:paddingTop="@dimen/dm013"
            android:text="2018-01-01"
            android:textColor="@color/color999999"
            android:textSize="@dimen/dm026" />

        <View
            android:layout_width="@dimen/dm040"
            android:layout_height="@dimen/dm001"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dm020"
            android:background="@color/cccccc"></View>

        <TextView
            android:id="@+id/real_end_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dm020"
            android:background="@drawable/selector_fragment_2_dialog_tab"
            android:button="@null"
            android:clickable="true"
            android:paddingBottom="@dimen/dm013"
            android:paddingLeft="@dimen/dm010"
            android:paddingRight="@dimen/dm010"
            android:paddingTop="@dimen/dm013"
            android:text="2018-12-31"
            android:textColor="@color/color999999"
            android:textSize="@dimen/dm026" />
    </LinearLayout>

    <include layout="@layout/layout_line_1px_d9d9d9"></include>

    <Button
        android:id="@+id/dialog_add_card_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/selector_bg_white_f2"
        android:gravity="center"
        android:text="@string/sure"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/dm026" />
</LinearLayout>